fix: fixed a bug that would break the game when editing player character before selecting a cpu character

--- a/src/styles/containers.css
+++ b/src/styles/containers.css
@@ -15,8 +15,8 @@
 }
 
 .wrapper--character-selection {
-  grid-auto-flow: column;
-  justify-content: space-evenly;
+  grid-template-columns: 1fr 1fr;
+  margin-inline: 6rem;
   place-items: center;
   height: 100vh;
   gap: 0;
